--- a/css/_project.scss
+++ b/css/_project.scss
@@ -4,11 +4,6 @@
 }
 
 
-//Resets css style which helped avoid unknown padding between divs
-* {
-  margin: 0;
-  padding: 0;
-}
 
 // .projects{
 //     margin-top: 120%;
